<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbckgrnd"

    tools:context=".HikingFragment">

    <!-- TODO: Update blank fragment layout -->

    <Spinner
        android:id="@+id/citySpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:background="@null"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:popupBackground="#DCEDC8"
        android:scrollIndicators="right" />

    <Spinner
        android:id="@+id/stateSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:background="@null"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:popupBackground="#DCEDC8"
        android:scrollIndicators="right" />

    <EditText
        android:id="@+id/radiusField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnSearch"
        android:layout_alignLeft="@+id/btnSearch"
        android:layout_alignRight="@+id/btnSearch"
        android:layout_alignStart="@+id/btnSearch"
        android:layout_centerVertical="true"
        android:background="#DCEDC8"
        android:ems="10"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter the search radius: "
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_above="@+id/radiusField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="65dp"
        android:scaleType="fitCenter"

        app:srcCompat="@drawable/hiking"

        android:layout_below="@+id/radiusField"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="Choose the nearest city:"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/stateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

</RelativeLayout>
